--- a/app/globals.css
+++ b/app/globals.css
@@ -247,8 +247,7 @@ select {
 
 button,
 [type='button'],
-[type='reset'],
-[type='submit'] {
+[type='reset'] {
   -webkit-appearance: button;
   /* 1 */
   background-color: transparent;
